test/error/adt2.stg
-- lowercase datacon
data Foo = a | B;

